# neonatal-eeg-seizure-detection

./: README.md  plots.py  pyproject.toml  requirements.txt
Tests/: conftest.py  test_pipeline.py  test_preprocessing.py
preprocessing/: EEG_neonatal.py  EEG_neonatal_FUNS.py
src/: cnn.py  config.py  engine.py  evaluation.py  loaders.py  logger.py  main.py  main_mult.py  processor.py  training.py
working/inputs/results_expert_A/: expert_A_1sec_1chunk_64Hz.hdf5
working/inputs/results_expert_B/: expert_B_1sec_1chunk_64Hz.hdf5
working/outputs/A/: results_W1_C10.csv  results_W1_C2.csv  results_W1_C20.csv  results_W1_C5.csv  results_W2_C1.csv
working/outputs/B/: results_W1_C1.csv
