[project]
name = "neonatal-eeg-seizure-detection"
version = "0.1.0"
description = "EEG deep learning experiments for DS final project"
readme = "README.md"
requires-python = ">=3.9"

[owner]
name = "Luna G & Karla A"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "h5py",
    "scikit-learn",
    "matplotlib",
    "torch",
    "torchvision",
    "tqdm",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
