[tool.poetry]
name = "neonatal_eeg_classification"
version = "0.1.0"
description = "EEG neonatal seizure classification pipeline with CNN and K-Fold evaluation"
authors = ["Karla A. & Luna G."]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.1"
h5py = "^3.9"
scipy = "^1.11"
mne = "^1.3"
matplotlib = "^3.8"
tensorflow = "^2.16"
scikit-learn = "^1.3"
tqdm = "^4.66"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
